--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 buddy_system_allocator = "0.6"
 bitflags = "1.2.1"
-riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
+riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 embedded-graphics = "0.7.1"
 oorandom ="11"
